# lm-studio-mcp-server

./: .gitignore  MIT-LICENSE.txt  README.md  git_mcp_server.py  mcp.json  mcp_file_organizer.py  mcp_indexer.py  mcp_server.py  mcp_webscraper.py  pyproject.toml  requirements.txt
config/: AgentTools.preset.json
