[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lm-studio-mcp-server"
version = "1.0.0"
description = "A robust Model Context Protocol (MCP) server for LM Studio integration with safety-first file operations, persistent memory management, and comprehensive tooling."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Pazran"}
]
keywords = ["mcp", "lm-studio", "model-context-protocol", "ai-tools", "file-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core MCP Server
    "mcp>=1.0.0",
    
    # Data Processing
    "pandas>=2.0.0",
    
    # PDF Reading (for read_pdf_text tool)
    "pypdf>=4.0.0",
    
    # File Operations (safe delete to Recycle Bin)
    "send2trash>=1.8.0",
    
    # Web Search via SearXNG
    "requests>=2.31.0",
    
    # HTML Parsing (web search results)
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]
git-tools = [
    "gitpython>=3.1.0",
]

[project.scripts]
lm-studio-mcp-server = "mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["venv/", "__pycache__/", ".git/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
